# BudZKVM

./: Cargo.toml  README.md  example.bud  flake.nix
bud-cli/: Cargo.toml
bud-cli/src/: main.rs
bud-compiler/: Cargo.toml
bud-compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  sema.rs
bud-isa/: Cargo.toml
bud-isa/src/: lib.rs
bud-proof/: Cargo.toml
bud-proof/src/: adapter.rs  lib.rs  plonky3_air.rs  plonky3_prover.rs  winterfell_prover.rs
bud-state/: Cargo.toml
bud-state/src/: lib.rs
bud-vm/: Cargo.toml
bud-vm/src/: lib.rs
docs/: 02_isa_ve_bytecode.md  03_virtual_machine.md  04_zk_friendly_architecture.md  05_stark_ve_plonky3.md  06_compiler_ve_ekosistem.md  README.md
