[package]
name = "bud-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
bud-vm = { path = "../bud-vm" }
bud-isa = { path = "../bud-isa" }
winterfell = "0.7"
winter-math = "0.7"
winter-crypto = "0.7"
serde = { version = "1.0", features = ["derive"] }

p3-air = "0.5.2"
p3-matrix = "0.5.2"
p3-uni-stark = "0.5.2"
p3-field = "0.5.2"
p3-commit = "0.5.2"
p3-challenger = "0.5.2"
p3-symmetric = "0.5.2"
p3-keccak = "0.5.2"
p3-fri = "0.5.2"
p3-util = "0.5.2"
p3-goldilocks = "0.5.2"
p3-merkle-tree = "0.5.2"
p3-dft = "0.5.2"
bincode = "1.3"
